
Editing of other groups in Admin including sessions and fee for clubs.

Test version of export community groups.

Emails to responsibles now include special needs.

Targets are differentiated by section.

Comments flagged in db when shared with guardians.

Moved all report comments over to tinyMCE and use xmlreader to process comments in fetch_report.

Switched on the past plugin for tinyMCE.


Version ClaSS-0.9.26 release (2010/9/21)
-----------------------------------------

Transport editing added to the InfoBook. Also transport displayed in the
Register.

Added option for automatic setting of return journey.

Made the default SEN MedBook lists display all flagged students if not
too many. Total count added to sidebar.

New config option to make boarders optional.

Implemented subject status for report columns.

Fixed typo in student backgrounds.

Fix to new enrolment stats for current year.


Version ClaSS-0.9.25 release (2010/9/11)
-----------------------------------------

Included spellcheck for tinyMCE.

Enrolment assessments now part of the studentfields for listing in
InfoBook.

Make login to eportfolio in hidden iframe suitable for access to
student report archive.

Moved the studentlist table row extra div out to an include.

Targets tick added but no targets entry yet.

The community edit page can now set transport bookings.

A fix to delete_transport so it sets the community stay correctly.

Basic Targets working including fetchTargets function.

Fix to saved views.

Added clubs to the list_community search and both transport and clubs
to the single field array. The studnet lists are now titled.

Option to use dob as epf password.


Version ClaSS-0.9.24 release (2010/8/25)
-----------------------------------------

Changed the epf fileurl function to be epf_list_files.

Made use of epf_list_files for the InfoBook's student_reports page.

Fixed list_assessment_profiles to use multiple courses.

Student lists for buses using transport_print.
