@@ -288,8 +288,9 @@ $string['reenroling']='Re-enroling';
 $string['newenrolments']='New enrolments';
 $string['capacity']='Capacity';
 $string['currentroll']='Current roll';
-$string['projectedroll']='Projected roll';
-$string['budgetroll']='Projected roll';
+$string['projectedroll']='Roll to date';
+$string['targetroll']='Projected roll';
+$string['budgetroll']='Budget roll';
 $string['accomodation']='Accomodation';
 $string['academic']='Curriculum';
 $string['pastoral']='Pastoral';
